k8s/registry/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: default
spec:
  selector:
    app: registry-ui
  ports:
    - port: 80
