k8s/registry/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry.home.gaborzeller.com`)
      kind: Rule
      services:
        - name: registry
          port: 5000
  tls:
    certResolver: cloudflare
    domains:
      - main: "*.home.gaborzeller.com"
